added pageination :+1: :100: :100: :joy_cat:

--- a/index.html
+++ b/index.html
@@ -408,8 +408,8 @@
         <li class="student-item cf">
             <div class="student-details">
                 <img class="avatar" src="https://randomuser.me/api/portraits/thumb/men/63.jpg">
-                <h3>devon barnes</h3>
-                <span class="email">devon.barnes@example.com</span>
+                <h3>Jordan Hochman</h3>
+                <span class="email">hawkmath@gmail.com</span>
             </div>
             <div class="joined-details">
                    <span class="date">Joined 09/19/14</span>
