--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
         <li class="student-item cf">
             <div class="student-details">
                 <img class="avatar" src="https://randomuser.me/api/portraits/thumb/men/63.jpg">
-                <h3>Jordan Hochman</h3>
+                <h3>jordan hochman</h3>
                 <span class="email">hawkmath@gmail.com</span>
             </div>
             <div class="joined-details">
